# MA-Test-task

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  schemas.py
src/: main.py  schemas.py
