[project]
name = "MA-Test-task"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Egor Pavlovich", email = "pavlovich.er@phystech.edu"},
]
dependencies = ["fake-useragent>=2.2.0", "pydantic>=2.11.7", "requests>=2.32.4"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
